--- a/index.html
+++ b/index.html
@@ -12,12 +12,11 @@
 
 <body>
     <header class="container text-center">
-        <img src="img/avatar-perfil.png" alt="avatar da Fernanda" class="rounded-circle" width="150" height="150"
+        <img src="img/avatar-perfil.png" alt="avatar do Esdras" class="rounded-circle" width="150" height="150"
             srcset="">
         <p class="lead">Eu sou Esdras_</p>
         <h1>Eu estou aprendendo Programação</h1>
-        <p>Sou Engenheira de Computação e Pedagoga. Ensino pensamento computacional para estudantes do Ensino
-            Fundamental e Médio. Ensino sobre pensamento computacional usando HTML, CSS e JavaScript. Veja os projetos
+        <p>Sou estudante do Ensino Médio. Veja os projetos
             que já desenvolvi!</p>
         <p>Minhas habilidades</p>
         <div>
