--- a/index.html
+++ b/index.html
@@ -16,8 +16,7 @@
             srcset="">
         <p class="lead">Eu sou Esdras_</p>
         <h1>Eu estou aprendendo Programação</h1>
-        <p>Sou estudante do Ensino Médio. Veja os projetos
-            que já desenvolvi!</p>
+        <p>Sou estudante do Ensino Médio. Fiz apenas um curso de informática</p>
         <p>Minhas habilidades</p>
         <div>
             <p class="badge bg-secondary">HTML</p>
